@@ -153,6 +153,7 @@ name|host
 return|;
 block|}
 block|}
+comment|/** 	 * Return a string that can be used for debug purpose.  It contains only stars for each password character. 	 */
 specifier|public
 name|String
 name|toString
@@ -169,7 +170,63 @@ argument_list|()
 operator|+
 literal|"/"
 operator|+
-name|getPasswd
+name|getPasswdAsStars
+argument_list|()
+return|;
+block|}
+specifier|private
+name|String
+name|getPasswdAsStars
+parameter_list|()
+block|{
+if|if
+condition|(
+name|_passwd
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+name|StringBuffer
+name|sb
+init|=
+operator|new
+name|StringBuffer
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+name|_passwd
+operator|.
+name|length
+argument_list|()
+init|;
+name|i
+operator|>
+literal|0
+condition|;
+name|i
+operator|--
+control|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|'*'
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|sb
+operator|.
+name|toString
 argument_list|()
 return|;
 block|}
