@@ -48,7 +48,8 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 =====================================
 - IMPROVEMENT: Allow "main" parameters to be passed directly (instead of using -args flag) (IVY-480) (thanks to Archie Cobbs)
 
-- BUG: ivy:install ant task does not fail on error (IVY-475) (thanks to Jeffrey Blatttman)
+- FIX: ivy:install ant task does not fail on error (IVY-475) (thanks to Jeffrey Blatttman)
+- FIX: Credentials are shown in build log even if debug is not enabled (IVY-486) (thanks to Gilles Scokart)
 
    2.0.0-alpha1-incubating
 =====================================
